--- a/src/components/popover/style.css
+++ b/src/components/popover/style.css
@@ -2,8 +2,8 @@
     width: 59%;
     background-color: #fff;
     border-radius: 0.3rem;
-    height: 60vh;
-    padding: 30px;
+    height: 65vh;
+    padding: 50px 30px 30px;
 }
 .modal-container {
     background: rgba(0 ,0 , 0 , 0.7);
@@ -18,6 +18,74 @@
 }
 .size{
     color: #09142f;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
+    margin-bottom: 18px;
+}
+h5.data {
+    color: #0049AE;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 18px;
+}
+.checklist-container{
+    width: 300px;
+    height: 250px
+}
+.checklist-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+h5.data.callBack-request{
+    font-size: 20px;
+}
+input[type="text"] , select {
+    color: #626262;
+    background-color: rgba(255,255,255,1);
+    width: 100%;
+    border: 1px solid #EBEBEB;
+    padding: 10px;
+    outline: none;
+}
+.form-group {
+    margin-bottom: 16px;
+}
+.submit-btn{
+    background-color: #ff8c1a;
+    width: 100%;
+    margin-left: 0px;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0px;
+    padding: 16px 16px 16px 16px;
+    border-radius: 5px;
+    border:0px;
+    color:white;
+}
+.border-pipe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.sepText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+.sepText::before {
+    content: '';
+    flex: 1;
+    width: 1px;
+    height: 130px;
+    background: currentColor;
+}
+.sepText::after {
+    content: '';
+    width: 1px;
+    height: 281px;
+    background: currentColor;
+    margin-bottom: 87px;
 }
