--- a/src/components/popover/style.css
+++ b/src/components/popover/style.css
@@ -2,8 +2,9 @@
     width: 59%;
     background-color: #fff;
     border-radius: 0.3rem;
-    height: 65vh;
+    height: 71vh;
     padding: 50px 30px 30px;
+    position: relative;
 }
 .modal-container {
     background: rgba(0 ,0 , 0 , 0.7);
@@ -85,7 +86,20 @@ input[type="text"] , select {
 .sepText::after {
     content: '';
     width: 1px;
-    height: 281px;
+    height: 300px;
     background: currentColor;
-    margin-bottom: 87px;
+    margin-bottom: 28px;
+}
+i{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    color: white;
+    padding: 12px;
+    border-radius: 3px 3px 3px 3px;
+    background-color: rgba(0, 105, 217, .6);
+    cursor: pointer;
+}
+i:hover{
+    background-color: rgb(0, 105, 217);
 }
